# relatorio_conformidade

./: README.md  main.py  pyproject.toml  test.py  teste02.py  v1.py  v2.py  v3.py
antigos/: main.py
src/word/: 01. Relatório de Conformidade  - PRECA.docx  01. Relatório de Conformidade  - RPV.docx
