[project]
name = "relatorio-conformidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "document>=1.0",
    "docx>=0.2.4",
    "docxtpl>=0.20.1",
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "python-docx>=1.2.0",
    "rich>=14.2.0",
    "slugify>=0.0.1",
    "typer>=0.19.2",
    "unidecode>=1.4.0",
]
